--- a/ly-goods-service/src/main/resources/templates/item.html
+++ b/ly-goods-service/src/main/resources/templates/item.html
@@ -212,17 +212,17 @@
                             <div class="fl title">
                                 <div class="control-group">
                                     <div class="controls">
-                                        <input autocomplete="off" type="text" disabled value="1" minnum="1"
+                                        <input autocomplete="off" type="text" disabled v-model="num" minnum="1"
                                                class="itxt"/>
-                                        <a href="javascript:void(0)" class="increment plus">+</a>
-                                        <a href="javascript:void(0)" class="increment mins">-</a>
+                                        <a href="javascript:void(0)" class="increment plus" @click="increment">+</a>
+                                        <a href="javascript:void(0)" class="increment mins" @click="decrement">-</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="fl">
                                 <ul class="btn-choose unstyled">
                                     <li>
-                                        <a href="success-cart.html" target="_blank"
+                                        <a href="javascript:void(0)" @click="addCart"
                                            class="sui-btn  btn-danger addshopcar">加入购物车</a>
                                     </li>
                                 </ul>
@@ -646,7 +646,8 @@
             specialSpec,
             genericSpec,
             indexes,
-            groups
+            groups,
+            num: 1
         },
         components: {
             lyTop: () => import('/js/pages/top.js')
@@ -670,6 +671,52 @@
                     })
                 })
                 return groups;
+            }
+        },
+        methods:{
+            increment(){
+                this.num++
+            },
+            decrement(){
+                if (this.num > 1){
+                    this.num--
+                }
+            },
+            addCart(){
+                ly.http.get("/auth/verify")
+                    .then(resp => {
+                    //    已登录，发送信息到后台，添加到redis
+                        ly.http.post("/cart",{skuId: this.sku.id, num: this.num})
+                            .then(()=>{
+                                window.location.href="http://www.leyou.com/cart.html";
+                            })
+                    })
+                    .catch(()=>{
+                    //    未登录，添加到localstorage
+                    //    1. 查询本地存储的购物车
+                        const carts = ly.store.get("carts") || [];
+                        let cart = carts.find(c => c.skuId === this.sku.id);
+                    //    2. 判断是否存在
+                        if (cart){
+                            //存在，添加数量
+                            cart.num += this.num;
+                        }else {
+                            //不存在，新增
+                            cart = {
+                                skuId: this.sku.id,
+                                title: this.sku.title,
+                                image: this.images[0],
+                                price: this.sku.price,
+                                num: this.num,
+                                ownSpec: JSON.stringify(this.sku.ownSpec)
+                            };
+                            carts.push(cart);
+                        }
+                    //    把carts写回localstorage
+                        ly.store.set("carts",carts);
+                    //    跳转
+                        window.location.href = "http://www.leyou.com/cart.html";
+                    });
             }
         }
     });
