--- a/ly-goods-service/src/main/resources/templates/item.html
+++ b/ly-goods-service/src/main/resources/templates/item.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8"/>
@@ -192,7 +193,8 @@
                     </div>
                     <div class="clearfix choose">
                         <div id="specification" class="summary-wrap clearfix">
-                            <dl v-for="(v,k) in specialSpec" :key="k" v-if="specialSpec[k].length > 0">
+                            <!--<dl v-for="(v,k) in specialSpec" :key="k" v-if="specialSpec[k].length > 0">-->
+                            <dl v-for="(v,k) in specialSpec" :key="k">
                                 <dt>
                                     <div class="fl title">
                                         <i v-text="paramMap[k]"></i>
@@ -205,6 +207,17 @@
                                         <span title="点击取消选择">&nbsp;</span>
                                     </a>
                                 </dd>
+                            </dl>
+                            <dl>
+                                <dt>
+                                    <div class="fl title">
+                                        <i>购买方式</i>
+                                    </div>
+                                </dt>
+                                <dd><a href="javascript:;" class="selected">官方标配<span title="点击取消选择">&nbsp;</span>
+                                </a></dd>
+                                <dd><a href="javascript:;">移动优惠版</a></dd>
+                                <dd><a href="javascript:;" class="locked">电信优惠版</a></dd>
                             </dl>
                         </div>
 
@@ -628,12 +641,12 @@
     const specialSpec = JSON.parse(/*[[${spuDetail.specialSpec}]]*/ "");
     const genericSpec = JSON.parse(/*[[${spuDetail.genericSpec}]]*/ "");
 
-    const groups = /*[[${groups}]]*/ [];
-
     const indexes = {};
+
     Object.keys(specialSpec).forEach(key => {
         indexes[key] = 0
     })
+    const groups = /*[[${groups}]]*/ null;
 </script>
 
 <script>
@@ -655,7 +668,7 @@
         computed: {
             sku() {
                 const index = Object.values(this.indexes).join("_");
-                return this.skus.find(s => s.indexes = index);
+                return this.skus.find(s => s.indexes == index);
             },
             images() {
                 return this.sku.images ? this.sku.images.split(",") : ['']
